# MovieMadness_webapp

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  config.py  pyproject.toml  requirements.txt  run.py
PycharmProjects/LearningBattleField/: pyproject.toml
PycharmProjects/Web_MM/: .pre-commit-config.yaml  pyproject.toml
app/: __init__py.py
app/db/: models.py
app/routes/: web_interface.py
app/services/: sqllite_data_manager.py
application/: app_factory.py
application/db/: models.py  moviemadness.sqlite  test_movie_db.sqlite
application/routes/: errors.py  movie_routes.py  user_routes.py  web_interface.py
application/services/: data_manager.py  forms.py  logger.py  ombi_interface.py  sqllite_data_manager.py
application/static/: styles.css
application/templates/: add_movie.html  base.html  error.html  index.html  movie.html  movies.html  user.html  user_movies.html  users.html
tests/: test_basic.py  test_sqllite_data_manager.py
